--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=3000
+MONGO_URI=mongodb+srv://muhammadjamal:muhammadjamal@cluster0.1lcbwas.mongodb.net/?retryWrites=true&w=majority
+NODE_ENV=production
