--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.5.0",
     "nodemon": "^2.0.19"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "name": "task-manager",
   "description": "A simple task manager app with node js",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/muhammadgh222/task-manager.git"
